# Processing-Models-Generated-on-Blender

./: Doxyfile  README.md
Blender/: NormaisFaces.py  area.py  area2.py  contas.py  lengthToFile.py
Doxygen/html/: _aresta_8cpp_source.html  _aresta_8h_source.html  _arestas_faces_8h_source.html  _face_8cpp_source.html  _face_8h_source.html  _modelo_8cpp_source.html  _modelo_8h_source.html  _s_gestao_8cpp_source.html  _s_gestao_8h_source.html  _utils_8cpp_source.html  _utils_8h_source.html  _vertice_8cpp_source.html  _vertice_8h_source.html  _x_m_l_writer_8cpp_source.html  _x_m_l_writer_8h_source.html  annotated.html  annotated_dup.js  class_aresta-members.html  class_aresta.html  class_aresta.js  class_arestas_faces-members.html  class_arestas_faces.html  class_arestas_faces.js  class_face-members.html  class_face.html  class_face.js  class_modelo-members.html  class_modelo.html  class_modelo.js  class_s_gestao-members.html  class_s_gestao.html  class_s_gestao.js  class_utils-members.html  class_utils.html  class_utils.js  class_vertice-members.html  class_vertice.html  class_vertice.js  class_x_m_l_writer-members.html  class_x_m_l_writer.html  (+10 more)
Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  searchdata.js
ProjetoPOO/: Aresta.cpp  Aresta.h  ArestasFaces.cpp  ArestasFaces.h  CMakeLists.txt  Face.cpp  Face.h  Modelo.cpp  Modelo.h  SGestao.cpp  SGestao.h  Utils.cpp  Utils.h  Vertice.cpp  Vertice.h  XMLWriter.cpp  XMLWriter.h  main.cpp
